--- a/articles/active-directory/external-identities/index.yml
+++ b/articles/active-directory/external-identities/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:Landing
 title: 外部标识文档
-summary: “外部标识”是一组功能，可供组织用来保护和管理任何外部用户（包括客户和合作伙伴）。 “外部标识”以 B2B 协作为基础，提供了更多用来与组织外的用户进行交互和连接的功能。
+summary: “外部标识”是一组功能，可供组织用来保护和管理任何外部用户（包括客户和合作伙伴）。 “外部标识”以 B2B 协作为基础，让你有更多的方式与组织外部的用户急性交互的联系。
 metadata:
   title: 外部标识文档
-  description: “外部标识”是一组功能，可供组织用来保护和管理任何外部用户（包括客户和合作伙伴）。 “外部标识”以 B2B 协作为基础，提供了更多用来与组织外的用户进行交互和连接的功能。
+  description: “外部标识”是一组功能，可供组织用来保护和管理任何外部用户（包括客户和合作伙伴）。 “外部标识”以 B2B 协作为基础，让你有更多的方式与组织外部的用户急性交互的联系。
   ms.service: active-directory
   ms.subservice: B2B
   ms.workload: identity
@@ -12,12 +12,12 @@ metadata:
   author: msmimart
   ms.author: mimart
   manager: celested
-  ms.openlocfilehash: 694b5fee19a1c0dca752e02259e3cc398ae6e55e
-  ms.sourcegitcommit: 4e5560887b8f10539d7564eedaff4316adb27e2c
+  ms.openlocfilehash: bad40c34db9f597320a05f46be92baae6632d93e
+  ms.sourcegitcommit: 32c521a2ef396d121e71ba682e098092ac673b30
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/06/2020
-  ms.locfileid: "87906724"
+  ms.lasthandoff: 09/25/2020
+  ms.locfileid: "91265606"
 landingContent:
 - title: 关于外部标识
   linkLists:
@@ -25,77 +25,63 @@ landingContent:
     links:
     - text: 比较外部标识解决方案
       url: compare-with-b2c.md
-    - text: 什么是 B2B 来宾用户访问权限？
+    - text: 什么是 Azure AD B2B 协作？
       url: what-is-b2b.md
-- title: 自助注册（预览版）
+    - text: 什么是 Azure AD B2C（企业到消费者）标识？
+      url: https://docs.microsoft.com/azure/active-directory-b2c/overview
+- title: 与组织外部的用户协作（B2B 协作）
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: 了解 B2B 来宾用户
+      url: user-properties.md
+    - text: B2B 来宾如何兑现邀请
+      url: redemption-experience.md
+  - linkListType: how-to-guide
+    links:
+    - text: 配置外部协作设置
+      url: delegate-invitations.md
+    - text: 设置直接联合身份验证（预览版）
+      url: direct-federation.md
+    - text: 设置一次性密码（预览）
+      url: one-time-passcode.md
+    - text: 添加和邀请来宾用户
+      url: add-users-administrator.md
+    - text: 以来宾用户身份离开组织
+      url: leave-the-organization.md
+- title: 将应用扩展给消费者和客户 (Azure AD B2C)
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: 关于 Azure AD B2C
+      url: https://docs.microsoft.com/azure/active-directory-b2c/overview
+    - text: 技术和功能概述
+      url: https://docs.microsoft.com/azure/active-directory-b2c/technical-overview
+    - text: 查看所有 Azure AD B2C 文档
+      url: https://docs.microsoft.com/azure/active-directory-b2c/
+  - linkListType: concept
+    links:
+    - text: Azure AD B2C 用户流
+      url: https://docs.microsoft.com/azure/active-directory-b2c/user-flow-overview
+    - text: Azure AD B2C 自定义策略
+      url: https://docs.microsoft.com/azure/active-directory-b2c/custom-policy-overview
+  - linkListType: tutorial
+    links:
+    - text: 在 Azure AD B2C 中创建用户流
+      url: https://docs.microsoft.com/azure/active-directory-b2c/tutorial-create-user-flows
+- title: B2B 来宾用户的自助注册（预览）
   linkLists:
   - linkListType: overview
     links:
     - text: 什么是自助服务注册？
       url: self-service-sign-up-overview.md
+  - linkListType: sample
+    links:
+    - text: 用户流的 API 连接器代码示例
+      url: code-samples-self-service-sign-up.md
   - linkListType: how-to-guide
     links:
     - text: 添加自助注册用户流
       url: self-service-sign-up-user-flow.md
     - text: 定义用户流的自定义属性
       url: user-flow-add-custom-attributes.md
-- title: 邀请 B2B 来宾用户
-  linkLists:
-  - linkListType: concept
-    links:
-    - text: B2B 来宾如何兑现邀请
-      url: redemption-experience.md
-  - linkListType: quickstart
-    links:
-    - text: 将来宾用户添加到目录
-      url: b2b-quickstart-add-guest-users-portal.md
-    - text: 使用 PowerShell 添加来宾用户
-      url: b2b-quickstart-invite-powershell.md
-  - linkListType: how-to-guide
-    links:
-    - text: 管理员如何邀请来宾
-      url: add-users-administrator.md
-    - text: 用户如何邀请来宾
-      url: add-users-information-worker.md
-- title: 自定义 B2B 协作
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: 启用 B2B 协作
-      url: delegate-invitations.md
-  - linkListType: deploy
-    links:
-    - text: 设置直接联合身份验证（预览版）
-      url: direct-federation.md
-    - text: 设置 Google 联合身份验证
-      url: google-federation.md
-    - text: 设置一次性密码身份验证（预览版）
-      url: one-time-passcode.md
-  - linkListType: tutorial
-    links:
-    - text: 实施多重身份验证
-      url: b2b-tutorial-require-mfa.md
-  - linkListType: reference
-    links:
-    - text: B2B 协作代码和 PowerShell 示例
-      url: code-samples.md
-- title: 管理来宾用户
-  linkLists:
-  - linkListType: concept
-    links:
-    - text: 了解 B2B 来宾用户
-      url: user-properties.md
-    - text: 动态组和 B2B 来宾
-      url: use-dynamic-groups.md
-  - linkListType: how-to-guide
-    links:
-    - text: 针对 B2B 来宾用户进行审核和报告
-      url: auditing-and-reporting.md
-    - text: 向 B2B 来宾授权
-      url: add-guest-to-role.md
-    - text: 允许或阻止组织
-      url: allow-deny-list.md
-  - linkListType: deploy
-    links:
-    - text: 为 B2B 协作配置 SaaS 应用
-      url: configure-saas-apps.md
