--- a/articles/active-directory/reports-monitoring/toc.yml
+++ b/articles/active-directory/reports-monitoring/toc.yml
@@ -31,6 +31,8 @@
       href: plan-monitoring-and-reporting.md
     - name: 审核日志
       href: concept-audit-logs.md
+    - name: 新登录日志 - 预览
+      href: concept-all-sign-ins.md
     - name: 登录日志
       href: concept-sign-ins.md
     - name: 使用情况和见解报表
