--- a/articles/key-vault/managed-hsm/index.yml
+++ b/articles/key-vault/managed-hsm/index.yml
@@ -2,7 +2,7 @@
 title: Azure Key Vault 托管的 HSM 文档
 summary: 了解如何使用托管的 HSM 来创建及维护用于访问和加密云资源、应用和解决方案的密钥。 教程、API 参考和其他资源。
 metadata:
-  title: Azure 托管的 HSM 文档
+  title: Azure 托管 HSM 文档
   description: 了解如何使用托管的 HSM 来创建及维护用于访问和加密云资源、应用和解决方案的密钥。 教程、API 参考和其他资源。
   services: key-vault
   ms.service: key-vault
@@ -11,12 +11,12 @@ metadata:
   ms.author: mbaldwin
   manager: rkarlin
   ms.date: 09/15/2020
-  ms.openlocfilehash: d17d119528c04b270e9dffe5b824bafcc89472dc
-  ms.sourcegitcommit: bdd5c76457b0f0504f4f679a316b959dcfabf1ef
+  ms.openlocfilehash: e8f53bbc7d08b30d8c3431d5542f72762789a2bc
+  ms.sourcegitcommit: 32c521a2ef396d121e71ba682e098092ac673b30
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/22/2020
-  ms.locfileid: "90991948"
+  ms.lasthandoff: 09/25/2020
+  ms.locfileid: "91320568"
 landingContent:
 - title: 关于 Azure Key Vault 托管的 HSM（预览版）
   linkLists:
