--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -11,16 +11,16 @@
         - name: 简介
           href: get-started.md
           displayName: 'get, started'
-        - name: 1 创建 Synapse 工作区
+        - name: 1 创建工作区
           href: get-started-create-workspace.md
           displayName: 'get, started'
-        - name: 2 使用 SQL 池进行分析
+        - name: 2 使用 SQL 池
           href: get-started-analyze-sql-pool.md
           displayName: 'get, started'
-        - name: 3 使用 Spark 进行分析
+        - name: 3 使用 Spark
           href: get-started-analyze-spark.md
           displayName: 'get, started'
-        - name: 4 使用按需 SQL 进行分析
+        - name: 4 使用按需 SQL
           href: get-started-analyze-sql-on-demand.md
           displayName: 'get, started'
         - name: 5 分析存储帐户中的数据
@@ -35,7 +35,7 @@
         - name: 8 监视
           href: get-started-monitor.md
           displayName: 'get, started'
-        - name: 9 查看知识中心
+        - name: 9 探索知识中心
           href: get-started-knowledge-center.md
           displayName: 'get, started'
     - name: 备忘单
@@ -84,6 +84,8 @@
   items:
     - name: 运行 Apache Spark 应用程序
       href: ./spark/intellij-tool-synapse.md
+    - name: 运行适用于 Spark 池的 PySpark 应用程序
+      href: ./spark/vscode-tool-synapse.md
     - name: Spark 作业定义
       href: ./spark/apache-spark-job-definitions.md
     - name: Power BI Desktop
@@ -210,6 +212,8 @@
               href: ../data-factory/concepts-data-flow-expression-builder.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: 表达式语言
               href: ../data-factory/data-flow-expression-functions.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
+            - name: 与 Azure 数据工厂的区别
+              href: ./data-integration/concepts-data-factory-differences.md
     - name: Spark
       items:
         - name: 概述
@@ -590,7 +594,7 @@
               href: ../data-factory/connector-azure-database-for-postgresql.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: Azure 文件存储
               href: ../data-factory/connector-azure-file-storage.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
-            - name: Azure SQL Database
+            - name: Azure SQL 数据库
               href: ../data-factory/connector-azure-sql-database.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: Azure SQL 托管实例
               href: ../data-factory/connector-azure-sql-database-managed-instance.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
