--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -18,8 +18,10 @@
       href: add-application-portal-configure.md
     - name: 向应用分配用户
       href: add-application-portal-assign-users.md
-    - name: 设置单一登录
+    - name: 设置基于 SAML 的单一登录
       href: add-application-portal-setup-sso.md
+    - name: 设置基于 OIDC 的单一登录
+      href: add-application-portal-setup-oidc-sso.md
     - name: 删除应用
       href: delete-application-portal.md
 - name: 教程
