--- a/articles/attestation/toc.yml
+++ b/articles/attestation/toc.yml
@@ -46,3 +46,5 @@
       href: 'https://www.nuget.org/packages/Microsoft.Azure.DCAP/'
     - name: 用于 Linux 的 Azure DCAP 库
       href: 'https://packages.microsoft.com/ubuntu/18.04/prod/pool/main/a/az-dcap-client/'
+    - name: VBS 证明协议
+      href: virtualization-based-security-protocol.md
