--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -497,14 +497,16 @@
               href: platform/alerts-troubleshoot-metric.md
         - name: 日志警报规则
           items:
-            - name: 配置基于分析查询的警报
+            - name: 管理日志警报
               href: platform/alerts-log.md
-            - name: 查询
+            - name: 优化警报查询
               href: platform/alerts-log-query.md
-            - name: Webhook 操作
-              href: platform/alerts-log-webhook.md
+            - name: 使用 Resource Manager 模板
+              href: platform/alerts-log-create-templates.md
             - name: 排查日志警报问题
               href: platform/alerts-troubleshoot-log.md
+            - name: Webhook 操作
+              href: platform/alerts-log-webhook.md
         - name: 活动日志警报规则
           items:
             - name: 基于活动日志事件的警报
@@ -636,7 +638,7 @@
                 - name: Spring Boot 应用
                   displayname: java
                   href: /java/azure/spring-framework/configure-spring-boot-java-applicationinsights
-                - name: 疑难解答
+                - name: 故障排除
                   href: app/java-troubleshoot.md
             - name: Node.js
               href: app/nodejs.md
@@ -990,7 +992,7 @@
       items:
         - name: 概述
           href: insights/container-insights-overview.md
-        - name: 常见问题
+        - name: 常见问题解答
           href: faq.md#azure-monitor-for-containers
         - name: 启用监视
           items:
@@ -1145,6 +1147,8 @@
               href: platform/workbooks-tree-visualizations.md
             - name: 图形
               href: platform/workbooks-graph-visualizations.md
+            - name: 蜂巢
+              href: platform/workbooks-honey-comb.md
             - name: 复合条
               href: platform/workbooks-composite-bar.md
         - name: 数据源
@@ -1245,8 +1249,6 @@
           href: app/auto-collect-dependencies.md
         - name: 遥测关联
           href: app/correlation.md
-        - name: NuGet 包
-          href: app/nuget.md
         - name: 平台支持
           href: app/platforms.md
         - name: 终结点重写
@@ -1324,7 +1326,7 @@
           href: ./platform/classic-api-retirement-metrics-autoscale.md
         - name: 经典的警报和监视
           href: platform/monitoring-classic-retirement.md
-        - name: 切换日志警报 API 首选项
+        - name: 切换到当前日志警报 API
           href: platform/alerts-log-api-switch.md
         - name: Web 应用分析解决方案
           href: insights/azure-web-apps-analytics.md
