--- a/articles/azure-resource-manager/custom-providers/toc.yml
+++ b/articles/azure-resource-manager/custom-providers/toc.yml
@@ -9,6 +9,8 @@
   items:
     - name: 创建自定义资源提供程序
       href: create-custom-provider.md
+    - name: 创建自定义资源提供程序 - Azure PowerShell
+      href: create-custom-provider-quickstart-powershell.md
 - name: 教程
   items:
     - name: 自定义提供程序入门
@@ -45,6 +47,8 @@
       href: /rest/api/customproviders/
     - name: Azure CLI
       href: /cli/azure/ext/custom-providers/custom-providers/
+    - name: Azure PowerShell
+      href: /powershell/module/Az.CustomProviders/
     - name: Azure Policy 内置策略定义
       displayName: 'samples, policies, definitions'
       href: ./policy-reference.md
