--- a/articles/cognitive-services/Computer-vision/index.yml
+++ b/articles/cognitive-services/Computer-vision/index.yml
@@ -10,13 +10,13 @@ metadata:
   ms.topic: landing-page
   author: PatrickFarley
   ms.author: pafarley
-  ms.date: 10/01/2019
-  ms.openlocfilehash: 45515fc865d989394c465a25b5474153f8370bd0
-  ms.sourcegitcommit: 03662d76a816e98cfc85462cbe9705f6890ed638
+  ms.date: 09/22/2020
+  ms.openlocfilehash: 3a11be023df31fc4f6babe44d869ae89862ae501
+  ms.sourcegitcommit: 32c521a2ef396d121e71ba682e098092ac673b30
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/15/2020
-  ms.locfileid: "90530210"
+  ms.lasthandoff: 09/25/2020
+  ms.locfileid: "91277234"
 landingContent:
 - title: 关于计算机视觉
   linkLists:
@@ -86,7 +86,7 @@ landingContent:
       url: quickstarts-sdk/client-library.md?pivots=programming-language-javascript
     - text: 使用 Go SDK
       url: quickstarts-sdk/client-library.md?pivots=programming-language-go
-- title: 使用容器
+- title: 使用读取容器
   linkLists:
   - linkListType: get-started
     links:
@@ -102,6 +102,26 @@ landingContent:
       url: deploy-computer-vision-on-container-instances.md
     - text: 与 Kubernetes 和 Jenkins 配合使用
       url: deploy-computer-vision-on-premises.md
+- title: 使用空间分析容器
+  linkLists:
+  - linkListType: get-started
+    links:
+    - text: 安装和运行容器
+      url: spatial-analysis-container.md
+    - text: 配置操作
+      url: spatial-analysis-operations.md
+  - linkListType: deploy
+    links:
+    - text: 部署人员计数应用
+      url: spatial-analysis-web-app.md
+  - linkListType: concept
+    links:
+    - text: 区域和线条放置
+      url: spatial-analysis-zone-line-placement.md
+    - text: 相机放置
+      url: spatial-analysis-camera-placement.md
+    - text: 日志记录和故障排除
+      url: spatial-analysis-logging.md
 - title: 检测图像中的人脸
   linkLists:
   - linkListType: concept
