--- a/articles/communication-services/toc.yml
+++ b/articles/communication-services/toc.yml
@@ -82,7 +82,13 @@
   items:
     - name: REST API 文档
       href: 'https://docs.microsoft.com/rest/api/azure/'
+    - name: 调用库 (Android/Java)
+      href: 'https://docs.microsoft.com/java/api/com.azure.communication.calling?view=communication-services-java-android'
+    - name: 调用库 (JS)
+      href: 'https://docs.microsoft.com/javascript/api/azure-communication-services/@azure/communication-calling/?view=azure-communication-services-js'
+    - name: 调用库 (iOS)
+      href: 'https://docs.microsoft.com/objectivec/communication-services/calling/'
 - name: 资源
   items:
     - name: 发行说明
-      href: release-notes.md
+      href: 'https://github.com/Azure/Communication/blob/master/releasenotes/2020-September-22.md'
