--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -144,7 +144,7 @@
           href: search-howto-complex-data-types.md
         - name: 为关系数据建模
           href: index-sql-relational-data.md
-    - name: 引入任意数据
+    - name: 导入任何数据
       items:
         - name: 数据导入概述
           href: search-what-is-data-import.md
@@ -156,45 +156,19 @@
           href: search-howto-large-index.md
         - name: 处理并发更新
           href: search-howto-concurrency.md
-    - name: 引入仅限 Azure 的数据
+    - name: 导入 Azure 数据（索引器）
       items:
-        - name: 配置索引器
-          href: search-indexer-overview.md
-        - name: 监视索引器
-          href: search-howto-monitor-indexers.md
-        - name: 计划索引器
-          href: search-howto-schedule-indexers.md
-        - name: 映射字段
-          href: search-indexer-field-mappings.md
-        - name: 数据源
+        - name: 使用索引器
           items:
-            - name: Azure Blob
-              items:
-                - name: 在 Blob 上搜索
-                  href: search-blob-storage-integration.md
-                - name: 使用 AI 了解 Blob
-                  href: search-blob-ai-integration.md
-                - name: 配置 Blob 索引器
-                  href: search-howto-indexing-azure-blob-storage.md
-                - name: 为一对多 blob 创建索引
-                  href: search-howto-index-one-to-many-blobs.md
-                - name: 为 CSV Blob 创建索引
-                  href: search-howto-index-csv-blobs.md
-                - name: 为 JSON Blob 创建索引
-                  href: search-howto-index-json-blobs.md
-            - name: Azure 表
-              href: search-howto-indexing-azure-tables.md
-            - name: Azure Cosmos DB
-              href: search-howto-index-cosmosdb.md
-            - name: Azure Data Lake Storage Gen2
-              href: search-howto-index-azure-data-lake-storage.md
-            - name: SQL 数据库
-              href: search-howto-connecting-azure-sql-database-to-azure-search-using-indexers.md
-            - name: SQL 托管实例
-              href: search-howto-connecting-azure-sql-mi-to-azure-search-using-indexers.md
-            - name: SQL Server VM
-              href: search-howto-connecting-azure-sql-iaas-to-azure-search-using-indexers.md
-        - name: 使用托管标识进行连接
+            - name: 配置索引器
+              href: search-indexer-overview.md
+            - name: 监视索引器
+              href: search-howto-monitor-indexers.md
+            - name: 计划索引器
+              href: search-howto-schedule-indexers.md
+            - name: 映射字段
+              href: search-indexer-field-mappings.md
+        - name: 通过托管标识连接
           items:
             - name: 托管标识概述
               href: search-howto-managed-identities-data-sources.md
@@ -204,6 +178,32 @@
               href: search-howto-managed-identities-cosmos-db.md
             - name: SQL 数据库
               href: search-howto-managed-identities-sql.md
+        - name: Azure Blob
+          items:
+            - name: 在 Blob 上搜索
+              href: search-blob-storage-integration.md
+            - name: 使用 AI 了解 Blob
+              href: search-blob-ai-integration.md
+            - name: 配置 Blob 索引器
+              href: search-howto-indexing-azure-blob-storage.md
+            - name: 为一对多 blob 创建索引
+              href: search-howto-index-one-to-many-blobs.md
+            - name: 为 CSV Blob 创建索引
+              href: search-howto-index-csv-blobs.md
+            - name: 为 JSON Blob 创建索引
+              href: search-howto-index-json-blobs.md
+        - name: Azure 表
+          href: search-howto-indexing-azure-tables.md
+        - name: Azure Cosmos DB
+          href: search-howto-index-cosmosdb.md
+        - name: Azure Data Lake Storage Gen2
+          href: search-howto-index-azure-data-lake-storage.md
+        - name: Azure SQL 数据库
+          href: search-howto-connecting-azure-sql-database-to-azure-search-using-indexers.md
+        - name: Azure SQL 托管实例
+          href: search-howto-connecting-azure-sql-mi-to-azure-search-using-indexers.md
+        - name: Azure SQL Server VM
+          href: search-howto-connecting-azure-sql-iaas-to-azure-search-using-indexers.md
     - name: 使用技能 (AI)
       items:
         - name: 附加认知服务资源
@@ -388,7 +388,7 @@
           href: search-monitor-queries.md
         - name: 搜索流量分析
           href: search-traffic-analytics.md
-    - name: 疑难解答
+    - name: 故障排除
       items:
         - name: 索引器问题
           href: search-indexer-troubleshooting.md
@@ -536,7 +536,7 @@
           href: 'https://www.pluralsight.com/courses/azure-adding-search-abilities-apps'
         - name: 开发人员课程 (Pluralsight)
           href: 'https://www.pluralsight.com/courses/microsoft-azure-textual-content-search-enabling'
-    - name: 常见问题
+    - name: 常见问题解答
       href: search-faq-frequently-asked-questions.md
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/search/'
