--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -27,6 +27,8 @@
       href: roles.md
     - name: 高级多阶段攻击检测
       href: fusion.md
+    - name: 自带机器学习平台
+      href: bring-your-own-ml.md
     - name: 跨工作区和租户扩展 Azure Sentinel
       href: extend-sentinel-across-workspaces-tenants.md
     - name: 通过 UEBA 识别高级威胁
@@ -66,6 +68,8 @@
               href: connect-microsoft-defender-advanced-threat-protection.md
             - name: 用于标识的 Microsoft Defender（以前称为 Azure ATP）
               href: connect-azure-atp.md
+            - name: Microsoft Defender for Office 365（前身为 Office 365 ATP）
+              href: connect-office-365-advanced-threat-protection.md
             - name: Azure DDoS 防护
               href: connect-azure-ddos-protection.md
             - name: Azure 防火墙
