--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -207,7 +207,7 @@
           href: ../common/storage-concurrency.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: 查找、搜索和了解 Blob 数据
           items:
-            - name: 使用 Blob 索引管理和查找 Blob 数据
+            - name: 使用 Blob 索引来管理和查找 Blob 数据
               href: storage-manage-find-blobs.md
             - name: 使用 AI 了解 Blob 数据
               href: ../../search/search-blob-ai-integration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
@@ -249,7 +249,7 @@
                       href: ../common/storage-import-export-tool-repairing-an-import-job-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                     - name: 修复导出作业
                       href: ../common/storage-import-export-tool-repairing-an-export-job-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 常见问题
+                - name: 常见问题解答
                   href: ../common/storage-import-export-service-faq.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: REST API
                   href: /rest/api/storageimportexport/jobs
@@ -312,6 +312,8 @@
               href: storage-blob-properties-metadata.md
             - name: 复制 Blob (SDK)
               href: storage-blob-copy.md
+            - name: 使用 Blob 索引
+              href: storage-blob-index-how-to.md
         - name: 授予对 Blob 数据的访问权限
           items:
             - name: 用户的授权选项
@@ -460,8 +462,6 @@
           href: storage-custom-domain-name.md
         - name: 将事件路由到自定义终结点
           href: storage-blob-event-quickstart.md
-        - name: 利用 Blob 索引
-          href: storage-blob-index-how-to.md
         - name: 传输数据
           items:
             - name: AzCopy
