--- a/articles/time-series-insights/TOC.yml
+++ b/articles/time-series-insights/TOC.yml
@@ -15,6 +15,8 @@
   items:
     - name: 设置时序见解第 2 代环境
       href: tutorials-set-up-tsi-environment.md
+    - name: Azure 数字孪生与时序见解第 2 代之间的模型同步
+      href: tutorials-model-sync.md
 - name: 概念
   items:
     - name: Azure 时序见解第 2 代
